Changes package.json data and removes duplicated color based on original repo PR #17

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hyper-solarized-dark",
+  "name": "hyper-solarized-dark2",
   "version": "0.1.4",
   "description": "Hyper theme using the dark Solarized colors",
   "main": "index.js",
@@ -14,14 +14,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ghosh/hyper-solarized-dark.git"
+    "url": "git+https://github.com/estebanrao/hyper-solarized-dark.git"
   },
-  "author": "Indrashish Ghosh",
+  "author": "Esteban Rao",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Ghosh/hyper-solarized-dark/issues"
+    "url": "https://github.com/estebanrao/hyper-solarized-dark/issues"
   },
-  "homepage": "https://github.com/Ghosh/hyper-solarized-dark#readme",
+  "homepage": "https://github.com/estebanrao/hyper-solarized-dark#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
